# Guides

./: README.md
0 Environment Setup/: README.md
0 Environment Setup/chapters/: 0 Git.md  1 Homebrew.md  2 iTerm2.md  3 ZSH.md  4 Oh My Zsh.md
0 Environment Setup/chapters/0 Git/: README.md
0 Environment Setup/chapters/1 Homebrew/: README.md
0 Environment Setup/chapters/1 iTerm2/: README.md
0 Environment Setup/chapters/10 Rust/: README.md
0 Environment Setup/chapters/11 Docker/: README.md
0 Environment Setup/chapters/12 Docker/: README.md
0 Environment Setup/chapters/13 AWS CLI/: README.md
0 Environment Setup/chapters/14 AWS SAM CLI/: README.md
0 Environment Setup/chapters/3 ZSH/: README.md
0 Environment Setup/chapters/4 Oh My Zsh/: README.md
0 Environment Setup/chapters/5 VSCode/: README.md
0 Environment Setup/chapters/6 Fira Code/: README.md
0 Environment Setup/chapters/8 Node.js/: README.md
0 Environment Setup/chapters/8 Python/: README.md
0 Environment Setup/chapters/9 Poetry/: README.md
1 Static Websites/: README.md
chapters/0 Environment Setup/: README.md
sections/0_Environment_Setup/: README.md
sections/0_Environment_Setup/chapters/0_Git/: README.md
sections/0_Environment_Setup/chapters/10_Poetry/: README.md
sections/0_Environment_Setup/chapters/12_Docker/: README.md
sections/0_Environment_Setup/chapters/14_AWS_SAM_CLI/: README.md
sections/0_Environment_Setup/chapters/2_iTerm2/: README.md
sections/0_Environment_Setup/chapters/5_VSCode/: README.md
sections/0_Environment_Setup/chapters/6_Fira_Code/: README.md
sections/0_Environment_Setup/chapters/7_Firefox/: README.md
sections/0_Environment_Setup/chapters/9_Python/: README.md
sections/1_Static_Websites/: README.md
sections/1_Static_Websites/chapters/0_HTML/: README.md  index.html
sections/1_Static_Websites/chapters/1_CSS/: README.md  index.html  style.css
sections/1_Static_Websites/chapters/2_JavaScript/: README.md  index.html  script.js
sections/1_Static_Websites/chapters/3_HTML_tags/: README.md  index.html  style.css
sections/1_Static_Websites/chapters/4_CSS_selectors/: README.md  index.html  style.css
sections/1_Static_Websites/chapters/4_HTML_inputs/: README.md  index.html  script.js  style.css
sections/1_Static_Websites/chapters/5_CSS_selectors/: README.md  index.html  script.js
sections/1_Static_Websites/chapters/5_CSS_style_attributes/: README.md
sections/1_Static_Websites/chapters/6_CSS_styles/: README.md  index.html  script.js  style.css
sections/2_Python_Packages/: README.md
sections/2_Python_Packages/chapters/0_Init/: README.md
sections/2_Python_Packages/chapters/0_Poetry_Init/: README.md
sections/2_Python_Packages/chapters/1_Adding_Python/: README.md  pyproject.toml
sections/2_Python_Packages/chapters/7_Publish/: README.md  pyproject.toml
sections/2_Python_Packages/chapters/7_Publish/mandybrot/: colour.py
sections/2_Python_Packages/chapters/7_Publish/scripts/: run.py
sections/3_FastAPI_Backend/: README.md
sections/3_FastAPI_Backend/chapters/4_JavaScript/: README.md  pyproject.toml
sections/3_FastAPI_Backend/chapters/4_JavaScript/static/: script.js  style.css
sections/3_FastAPI_Backend/chapters/4_JavaScript/templates/: index.html
sections/3_Jupyter_Notebooks/: README.md
sections/3_Jupyter_Notebooks/0_Setup/: README.md
sections/3_Jupyter_Notebooks/chapters/0_Setup/: README.md  pyproject.toml
sections/3_Jupyter_Notebooks/chapters/1_Notebooks/: README.md  pyproject.toml
sections/3_Jupyter_Notebooks/chapters/1_Notebooks/examples/: places_to_visit.ipynb
sections/4_FastAPI_Backend/chapters/0_Init/: pyproject.toml
sections/4_FastAPI_Backend/chapters/0_Init/api/: main.py
sections/5_Rust_Crates/: README.md
sections/6_GPU_Programming/: README.md
sections/7_Rust_Powered_Python/: README.md
sections/8_Fortran_Powered_Python/: README.md
sections/8_Fortran_Powered_Python/0_Setup/: README.md
sections/8_Fortran_Powered_Python/chapters/0_Setup/: README.md  pyproject.toml
sections/8_Fortran_Powered_Python/chapters/0_Setup/adder/: __init__.py
sections/8_Fortran_Powered_Python/chapters/0_Setup/scripts/: run.py
simulations/neutron/: .gitignore  Cargo.toml  README.md  build.rs
simulations/neutron/src/: lib.rs  model.rs  particle.rs  run.rs
simulations/phase/: .gitignore  Cargo.toml  README.md  build.rs  neutrons.nc
simulations/phase/input/: parameters.json
simulations/phase/output/distance_y/: output.mov
simulations/phase/src/: colours.rs  data.rs  engine.rs  grid.rs  lib.rs  model.rs  neutron.rs  parameters.rs  run.rs
utility/AWS_Lambda/: .gitignore  README.md  samconfig.toml  template.yaml
utility/AWS_Lambda/events/: plot.sh
utility/AWS_Lambda/static/: index.html  logic.js
utility/AWS_S3_Buckets/: .gitignore  README.md  pyproject.toml
utility/AWS_S3_Buckets/scripts/: download.py  upload.py
utility/MPI_Python_Fortran/: .gitignore  README.md  main.f90  pyproject.toml  run.py
utility/MPI_for_Python/: README.md  pyproject.toml
utility/MPI_for_Python/scripts/: 0_basic.py  1_point_to_point.py  run.py
utility/QR/: .gitignore  README.md  pyproject.toml  run.py
utility/QR/scripts/: run.py
(+70 files in other folders)
