[package]
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
categories = ["science", "simulation"]
description = "Physics toolkit and simulations."
documentation = "https://github.com/RadiantTechLTD/guides/simulations/phase/README.md"
edition = "2021"
keywords = ["physics", "monte-carlo", "ray-tracing", "simulation"]
license = "None"
name = "phase"
readme = "README.md"
repository = "https://github.com/RadiantTechLTD/guides"
version = "0.0.0"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
