[tool.poetry]
name = "mandy"
version = "0.0.0"
description = "Plot the magical Mandelbrot set."
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
