[tool.poetry]
name = "my-notes"
version = "0.1.0"
description = "Jupyter notebook example"
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"
packages = [{include = "my_notes"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
# mandybrot = {path = "../../../2_Python_Packages/chapters/7_Publish"}
mandybrot = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
